# programming-lab

./: .gitignore  CMakeLists.txt  Chat.cpp  Chat.h  Interface.h  Message.h  Program.cpp  Program.h  ProgramManager.cpp  ProgramManager.h  README.md  TextUserInterface.cpp  TextUserInterface.h  User.cpp  User.h  functions.cpp  functions.h  main.cpp
test/: CMakeLists.txt  MessageTest.cpp  chatTests.cpp  functionsTest.cpp  programTest.cpp  runAllTests.cpp  userTest.cpp
